--- a/theory/public/css/styles.css
+++ b/theory/public/css/styles.css
@@ -234,8 +234,7 @@ ul#playlist li a {
 }
 
 ul#playlist li:hover span.displaytitle {
-	font-size:11px;
-	font-weight:bold;
+	text-shadow: black 1px 1px 1px;
 }
 
 ul#playlist li a img {
