Added '[All artists]' option, to allow all albums to be selected
This is especially important for albums that are compilations by multiple artists

--- a/theory/templates/artists.html
+++ b/theory/templates/artists.html
@@ -20,6 +20,7 @@
 <div id="container-artists">
     <ul id="list">
         <a name='jump#'></a>
+        <li><a onclick="artistAlbums('')">[All artists]</a></li>
         <% lastlead = '' %>
 
         % for artist in c.artists:
