--- a/theory/templates/albums.html
+++ b/theory/templates/albums.html
@@ -23,7 +23,9 @@
     }
 </style>
 
+% if c.artist:
 <h2>${c.artist} <a onclick="addAllArtistAlbums('${h.escape_js(c.artist)}')" style="cursor:pointer" title="add all albums"><img src="./img/add.png" /></a></h2>
+% endif
 
 <div id="artistalbumart">
 	% if len(c.album_imgs) > 0:	
@@ -42,7 +44,13 @@
 				else:
 					addclass = ''
 			%>
-            <li><a onclick="window.parent.addAlbum('${h.escape_js(c.artist)}','${h.escape_js(album)}')"><img src="./img/add.png" title="queue entire album" style="float:left;margin-right:5px;" /></a><a ${addclass} onclick="albumTracks('${h.escape_js(c.artist)}','${h.escape_js(album)}')">${album}</a></li>
+            <li><a onclick="window.parent.addAlbum('${h.escape_js(c.artist)}','${h.escape_js(album)}')"><img src="./img/add.png" title="queue entire album" style="float:left;margin-right:5px;" /></a><a ${addclass} onclick="albumTracks('${h.escape_js(c.artist)}','${h.escape_js(album)}')">
+                % if album:
+                ${album}
+                % else:
+                [no album]
+                % endif
+            </a></li>
         % endfor
     </ul>
 </div>
