--- a/theory/templates/artists.html
+++ b/theory/templates/artists.html
@@ -1,13 +1,5 @@
 ## vim: set tabstop=4: set shiftwidth=4: set expandtab
 <%inherit file="body.html"/>
-<script language="javascript">
-    $(document).ready(
-        function() {
-            $('#list li:odd a').addClass('oddrow');
-            $('#list li:even a').addClass('evenrow');
-        }
-    );
-</script>
 
 <style>
     body {
@@ -25,6 +17,7 @@
 
         % for artist in c.artists:
             <%
+
 				try:
 					if artist.startswith((u'The ',u'THE ',u'the ')):
 						firstchar = artist[4].lower()
@@ -33,12 +26,14 @@
 				except IndexError:
 					firstchar = ''
             %>  
+	    % if artist != '':
             <li>
                 % if firstchar != lastlead:
                     <a name="jump${firstchar}"></a>
                 % endif
                 <a onclick="artistAlbums('${h.escape_js(artist)}')">${artist}</a>
             </li>
+            % endif
             <% lastlead = firstchar %>
         % endfor
     </ul>
